tests/type-error/pattern-matching/Overlapping.vix
f True = 1
f False = 2
f False = 3
